Ipad alignment issues fix

--- a/stylesheets/modules/my-account/myaccount-subcription.less
+++ b/stylesheets/modules/my-account/myaccount-subcription.less
@@ -698,7 +698,7 @@
 				.subscription-list-header{
 					padding: 10px;
 					.header-left{
-						width: 68%;
+						width: 64%;
 						.subscription-number{
 							font-size: 14px;
 						}
@@ -709,7 +709,7 @@
 						}
 					}
 					.header-right{	
-						width: 30%;
+						width: 36%;
 						.subscription-order-total{
 							font-size: 14px;
 							padding-right: 30px;
