--- a/stylesheets/pages/checkout.less
+++ b/stylesheets/pages/checkout.less
@@ -4070,7 +4070,7 @@
                                             width:88%; 
                                         }
                                         &:after{
-                                            right: 17px;
+                                            right: 18%;
                                             top: 18px;
                                             width: 10px;
                                             height: 6px;
